# app/web/swagger.yaml
@@ -144,7 +144,7 @@ paths:
         - "office"
         - "remote"
         - "vacation"
-        - "holidays"
+        - "holiday"
         - "sick"
       - in: "query"
         name: "location"
@@ -184,7 +184,7 @@ paths:
         - "office"
         - "remote"
         - "vacation"
-        - "holidays"
+        - "holiday"
         - "sick"
       - in: "query"
         name: "location"
